--- a/etc/config.json
+++ b/etc/config.json
@@ -25,7 +25,7 @@
         "db_params": {"db": "dynamo"}
       }
     },
-    "included_sites": ["T0_CH_CERN_Disk", "T1_*", "T2_*"],
+    "included_sites": ["T2_KR_KISTI"],
     "excluded_sites": ["T1_UK_RAL_ECHO_Disk", "T2_CH_CERNBOX", "T2_MY_UPM_BIRUNI"]
   },
   "history": {
