inventory loads everything except files by default

--- a/etc/config.json
+++ b/etc/config.json
@@ -51,6 +51,8 @@
   },
   "debug": {
     "time_profile": true,
-    "repeat_failed_thread": true
+    "repeat_failed_thread": true,
+    "included_groups": "*",
+    "included_datasets": "*"
   }
 }
