--- a/etc/config.json
+++ b/etc/config.json
@@ -53,6 +53,6 @@
     "time_profile": true,
     "repeat_failed_thread": true,
     "included_groups": "*",
-    "included_datasets": "*"
+    "included_datasets": "/*/RunIISummer1680*/*"
   }
 }
