--- a/config/server_config.json.template
+++ b/config/server_config.json.template
@@ -35,7 +35,7 @@
       }
     }
   },
-  "scheduler_path": _SCHEDULER_PATH_
+  "scheduler_path": "_SCHEDULER_PATH_",
   "logging": {
     "level": "info",
     "path": "_LOGPATH_",
