conf -> conf template

--- a/config.sh.template
+++ b/config.sh.template
@@ -28,11 +28,9 @@ SCHEDULERSEQ=cms.seq
 # Httpd content directory
 WEBPATH=/var/www
 
-# Server database parameters
-SERVER_DB_WRITE_CNF=/etc/my.cnf.d/dynamo-write.cnf
-SERVER_DB_WRITE_CNFGROUP=mysql
-#SERVER_DB_WRITE_USER=
-#SERVER_DB_WRITE_PASSWD=
+# Server database parameters - need to explicitly set user and password
+SERVER_DB_WRITE_USER=
+SERVER_DB_WRITE_PASSWD=
 
 SERVER_DB_READ_CNF=/etc/my.cnf.d/dynamo.cnf
 SERVER_DB_READ_CNFGROUP=mysql
@@ -42,4 +40,4 @@ SERVER_DB=dynamo
 REGISTRY_DB=dynamoregister
 
 # Registry host
-REGISTRY_HOST=t3serv017.mit.edu
+REGISTRY_HOST=
