--- a/config/updater_config.json
+++ b/config/updater_config.json
@@ -16,7 +16,7 @@
   "sites": {
     "module": "PhEDExSiteInfoSource",
     "config": {
-      "include": ["T1_US_FNAL_Disk"],
+      "include": ["*"],
       "exclude": ["T1_UK_RAL_ECHO_Disk", "T2_CH_CERNBOX", "T2_MY_UPM_BIRUNI"],
       "ssb": {
         "url_base": "http://dashb-ssb.cern.ch/dashboard/request.py",
