dataset level groups

--- a/config/updater_config.json
+++ b/config/updater_config.json
@@ -10,7 +10,8 @@
   "groups": {
     "module": "PhEDExGroupInfoSource",
     "config": {
-      "phedex": {}
+      "phedex": {},
+      "dataset_level_groups": ["AnalysisOps", "IB RelVal", "RelVal"]
     }
   },
   "sites": {
