--- a/config/popularity_update_config.json
+++ b/config/popularity_update_config.json
@@ -20,7 +20,10 @@
     "store": {}
   },
   "mysql": {
-    "db_params": {}
+    "db_params": {
+      "config_file": "/etc/my.cnf.d/dynamo.cnf",
+      "config_group": "mysql"
+    }
   },
   "log_level": "info"
 }
