--- a/config/popularity_update_config.json
+++ b/config/popularity_update_config.json
@@ -8,7 +8,9 @@
         "auth_handler_conf": {}
       }
     },
-    "store": {}
+    "store": {},
+    "included_sites": ["T0_*", "T1_*", "T2_*"],
+    "excluded_sites": ["T1_UK_RAL_ECHO_Disk", "T2_CH_CERNBOX", "T2_MY_UPM_BIRUNI"]
   },
   "globalqueue": {
     "htcondor": {
