--- a/config/detox_config.json
+++ b/config/detox_config.json
@@ -21,15 +21,17 @@
       }
     },
     "history": {
-      "module": "DummyHistory",
-      "config": {}
+      "module": "MySQLHistory",
+      "config": {
+        "db_params": 
+      }
     },
     "attrs": {
       "MySQLReplicaLock": {
         "users": [],
         "db_params": {
-          "config_file": "/etc/my.cnf",
-          "config_group": "mysql-dynamo",
+          "config_file": "/etc/my.cnf.d/dynamo-read.cnf",
+          "config_group": "mysql",
           "db": "dynamoregister"
         }
       },
