--- a/config/detox_config.json
+++ b/config/detox_config.json
@@ -23,7 +23,13 @@
     "history": {
       "module": "MySQLHistory",
       "config": {
-        "db_params": 
+        "db_params": {
+          "config_file": "/etc/my.cnf.d/dynamo.cnf",
+          "config_group": "mysql",
+          "db": "dynamohistory"
+        },
+        "snapshots_spool_dir": "$(DYNAMO_SPOOL)/detox_snapshots",
+        "snapshots_archive_dir": "$(DYNAMO_ARCHIVE)/detox_snapshots"
       }
     },
     "attrs": {
