making detox work

--- a/config/detox_config.json
+++ b/config/detox_config.json
@@ -28,6 +28,11 @@
           "config_group": "mysql",
           "db": "dynamohistory"
         },
+        "cache_db_params": {
+          "config_file": "/etc/my.cnf.d/dynamo.cnf",
+          "config_group": "mysql",
+          "db": "dynamohistory_cache"
+        },
         "snapshots_spool_dir": "$(DYNAMO_SPOOL)/detox_snapshots",
         "snapshots_archive_dir": "$(DYNAMO_ARCHIVE)/detox_snapshots"
       }
@@ -44,11 +49,14 @@
       "CRABAccessHistory": {
         "store": {
           "db_params": {
-            "config_file": "/etc/my.cnf.d/dynamo.cnf",
+            "config_file": "/etc/my.cnf.d/dynamo-read.cnf",
             "config_group": "mysql",
             "db": "dynamo"
           }
         }
+      },
+      "ProtectedSiteTagger": {
+        "sites": ["T1_IT_CNAF_MSS"]
       }
     }
   },
