--- a/config/dealer_config.json
+++ b/config/dealer_config.json
@@ -16,8 +16,21 @@
       }
     },
     "history": {
-      "module": "DummyHistory",
-      "config": {}
+      "module": "MySQLHistory",
+      "config": {
+        "db_params": {
+          "config_file": "/etc/my.cnf.d/dynamo.cnf",
+          "config_group": "mysql",
+          "db": "dynamohistory"
+        },
+        "cache_db_params": {
+          "config_file": "/etc/my.cnf.d/dynamo.cnf",
+          "config_group": "mysql",
+          "db": "dynamohistory_cache"
+        },
+        "snapshots_spool_dir": "$(DYNAMO_SPOOL)/detox_snapshots",
+        "snapshots_archive_dir": "$(DYNAMO_ARCHIVE)/detox_snapshots"
+      }
     },
     "plugins": {
       "popularity": {
@@ -52,7 +65,7 @@
         "weight_halflife": 3.0,
         "store": {
           "db_params": {
-            "config_file": "/etc/my.cnf.d/dynamo.cnf",
+            "config_file": "/etc/my.cnf.d/dynamo-read.cnf",
             "config_group": "mysql",
             "db": "dynamo"
           }
