get_partition_names

--- a/config/siteinfo_config.json
+++ b/config/siteinfo_config.json
@@ -1,6 +1,5 @@
 {
-  "out_path_tmp": "/home/cmsprod/public_html/IntelROCCS/Detox",
-  "out_path": "/tmp",
+  "out_path": "/home/cmsprod/public_html/IntelROCCS/Detox",
   "history": {
     "module": "MySQLHistory",
     "config": {
