--- a/config/dealermon_config.json
+++ b/config/dealermon_config.json
@@ -7,14 +7,9 @@
     "module": "MySQLHistory",
     "config": {
       "db_params": {
-        "config_file": "/etc/my.cnf.d/dynamo-read.cnf",
+        "config_file": "/etc/my.cnf.d/dynamo.cnf",
         "config_group": "mysql",
         "db": "dynamohistory"
-      },
-      "cache_db_params": {
-        "config_file": "/etc/my.cnf.d/dynamo-read.cnf",
-        "config_group": "mysql",
-        "db": "dynamohistory_cache"
       }
     }
   },
