--- a/config/dealer_config.json
+++ b/config/dealer_config.json
@@ -36,7 +36,8 @@
         "priority": 4,
         "module": "EnforcerHandler",
         "config": {
-           "max_dataset_size": 50.0
+           "max_dataset_size": 50.0,
+	   "policy": "$(DYNAMO_BASE)/policies/common/enforcer_rules.json"
           }
         }
       },
