--- a/config/dealer_config.json
+++ b/config/dealer_config.json
@@ -9,7 +9,8 @@
           "url_base": "https://cmsweb.cern.ch/phedex/datasvc/json/prod",
           "dbs_url": "https://cmsweb.cern.ch/dbs/prod/global/DBSReader",
           "auth_handler": "HTTPSCertKeyHandler",
-          "auth_handler_conf": {}
+          "auth_handler_conf": {},
+          "num_attempts": 5
         },
         "chunk_size": 50
       }
