--- a/config/detox_config.json
+++ b/config/detox_config.json
@@ -74,7 +74,8 @@
     "url_base": "https://cmsweb.cern.ch/phedex/datasvc/json/prod",
     "dbs_url": "https://cmsweb.cern.ch/dbs/prod/global/DBSReader",
     "auth_handler": "HTTPSCertKeyHandler",
-    "auth_handler_conf": {}
+    "auth_handler_conf": {},
+    "num_attempts": 5
   },
   "log_level": "info"
 }
