--- a/config/detox_config.json
+++ b/config/detox_config.json
@@ -70,6 +70,16 @@
       }
     }
   },
+  "applock": {
+    "user": "dynamo",
+    "service": "dynamo",
+    "app": "detox",
+    "db_config": {
+      "config_file": "/etc/my.cnf.d/dynamo.cnf",
+      "config_group": "mysql",
+      "db": "dynamoregister"
+    }
+  },
   "phedex": {
     "url_base": "https://cmsweb.cern.ch/phedex/datasvc/json/prod",
     "dbs_url": "https://cmsweb.cern.ch/dbs/prod/global/DBSReader",
