--- a/config/convert_dynamo_locks_config.json
+++ b/config/convert_dynamo_locks_config.json
@@ -40,6 +40,22 @@
       "auth_handler": "CERNSSOCookieAuthHandler"
     }
   },
+  "mysqllock": {
+    "db_params": {
+      "config_file": "/etc/my.cnf.d/dynamo-read.cnf",
+      "config_group": "mysql",
+      "db": "dynamoregister"
+    }
+  },
+  "replica_source": {
+    "phedex": {
+      "url_base": "https://cmsweb.cern.ch/phedex/datasvc/json/prod",
+      "dbs_url": "https://cmsweb.cern.ch/dbs/prod/global/DBSReader",
+      "auth_handler": "HTTPSCertKeyHandler",
+      "auth_handler_conf": {},
+      "num_attempts": 5
+    }
+  },
   "applock": {
     "user": "dynamo",
     "service": "dynamo",
