--- a/config/siteinfo_config.json
+++ b/config/siteinfo_config.json
@@ -4,12 +4,12 @@
     "module": "MySQLHistory",
     "config": {
       "db_params": {
-        "config_file": "/etc/my.cnf.d/dynamo.cnf",
+        "config_file": "/etc/my.cnf.d/dynamo-read.cnf",
         "config_group": "mysql",
         "db": "dynamohistory"
       },
       "cache_db_params": {
-        "config_file": "/etc/my.cnf.d/dynamo.cnf",
+        "config_file": "/etc/my.cnf.d/dynamo-read.cnf",
         "config_group": "mysql",
         "db": "dynamohistory_cache"
       },
