--- a/mysql/grants.json.template
+++ b/mysql/grants.json.template
@@ -1,7 +1,7 @@
 {
   "dynamosrv": {
     "passwd": "",
-    "hosts": ["localhost"],
+    "hosts": ["localhost", "%"],
     "grants": [
       ["ALL PRIVILEGES", "dynamo%"]
     ]
