--- a/config/dealer_config.json
+++ b/config/dealer_config.json
@@ -73,8 +73,10 @@
           "max_dataset_size": 50.0,
           "max_cycle_volume": 5.0,
           "target_reasons": {
-            "dataset.name == /*/*/MINIAOD* and replica.num_full_disk_copy_common_owner < 3": 3,
-            "replica.num_full_disk_copy_common_owner < 2": 2
+            "dataset.name == /*/*/MINIAOD* and replica.num_full_disk_copy_common_owner < 3": 2,
+            "dataset.name == /*/*/MINIAOD* and replica.num_full_other_copy_common_owner < 2": 2,
+            "replica.num_full_disk_copy_common_owner < 2": 1,
+            "replica.num_full_other_copy_common_owner == 0": 1
           }
         }
       },
