--- a/config/siteinfo_config.json
+++ b/config/siteinfo_config.json
@@ -9,14 +9,17 @@
         "config_group": "mysql",
         "db": "dynamohistory"
       },
-      "cache_db_params": {
-        "config_file": "/etc/my.cnf.d/dynamo-read.cnf",
-        "config_group": "mysql",
-        "db": "dynamohistory_cache"
-      },
-      "snapshots_spool_dir": "$(DYNAMO_SPOOL)/detox_snapshots",
-      "snapshots_archive_dir": "$(DYNAMO_ARCHIVE)/detox_snapshots"
     }
+  },
+  "detox_history": {
+    "db_params": {
+      "config_file": "/etc/my.cnf.d/dynamo-read.cnf",
+      "config_group": "mysql"
+    },
+    "history_db": "dynamohistory",
+    "cache_db": "dynamohistory_cache",
+    "snapshots_spool_dir": "$(DYNAMO_SPOOL)/detox_snapshots",
+    "snapshots_archive_dir": "$(DYNAMO_ARCHIVE)/detox_snapshots"
   },
   "crabaccess": {
     "store": {
